rollback toList